--- a/of/app/views/user/home.rhtml
+++ b/of/app/views/user/home.rhtml
@@ -79,7 +79,7 @@
     <% end %>:
   </dt>
   <dd>
-    <a href="<%= "#{@homepage}"  %>" target="_blank"><%= "#{@homepage}"  %></a>
+    <a rel="foaf:homepage" href="<%= "#{@homepage}"  %>" target="_blank"><%= "#{@homepage}"  %></a>
   </dd>
 <% end %>
 
