--- a/of/app/views/openfoundry/_staticities.rhtml
+++ b/of/app/views/openfoundry/_staticities.rhtml
@@ -1,4 +1,7 @@
-<h3><img src="/images/of/icon01.gif" align="left" /><%=_('Statistics')%></h3>
+<h3>
+   <%= image_tag "of/icon01.gif", :align => "left" %>
+   <%=_('Statistics')%>
+</h3>
 <ul>
   <li><%= _('Registed Projects')%>: <%= projectCount %></li>
   <li><%= _('Registed Users')%>: <%= userCount %></li>
