--- a/of/app/views/projects/_most_active.rhtml
+++ b/of/app/views/projects/_most_active.rhtml
@@ -1,4 +1,7 @@
-<h3><img src="/images/of/icon06.gif" align="left" /><%=_('Most Active')%></h3>
+<h3>
+    <%= image_tag "of/icon06.gif", :align => "left" %>
+    <%=_('Most Active')%>
+</h3>
 <ul>
   <li>Create Animation Make a</li>
   <li>TinyTux with Pho ... Make a</li>
