--- a/of/app/views/projects/_new_projects.rhtml
+++ b/of/app/views/projects/_new_projects.rhtml
@@ -1,7 +1,9 @@
 <h3>
-  <%=link_to image_tag('/images/atom.png', {:alt => 'atom', :width => '20px', :style => 'padding:8px;float:right'}),
-                       {:controller => :projects, :action => :new_projects_feed, :format => :xml} %>
-  <img src="/images/of/icon_new_projects.gif" align="left" /><%= _('New Projects') %>
+  <%=link_to image_tag('atom.png', 
+               {:alt => 'atom', :width => '20px', :style => 'padding:8px;float:right'}),
+               {:controller => :projects, :action => :new_projects_feed, :format => :xml} %>
+  <%= image_tag "of/icon_new_projects.gif", :align => "left" %>
+  <%= _('New Projects') %>
 </h3>
 <ul>
   <%for project in projectList %>
