--- a/of/app/views/partials/_login.rhtml
+++ b/of/app/views/partials/_login.rhtml
@@ -2,7 +2,7 @@
   <%# = lightbox_link_to "Link Name", url_for(:controller => :images, :action => "image", :id => current_user.icon) %> 
   <%# = lightbox_image_tag(url_for(:controller => :images, :action => "image", :id => current_user.icon, :size => 24), url_for(:controller => :images, :action => "image", :id => current_user.icon), {:class=>"images"}, :title => "This is a test!") %>
   <%= user_portrait_link current_user,:size => 24, :align => :middle %>
-  <%= link_to current_user.login, :controller => :user, :action => :logout %>
+  <%= link_to current_user.login, :controller => :user, :action => :home %>
   &nbsp; | &nbsp; 
   <%= link_to _("Logout"), :contoller => :user, :action => :logout %>
 <% else -%>
