--- a/of/app/views/layouts/application.rhtml
+++ b/of/app/views/layouts/application.rhtml
@@ -5,6 +5,7 @@
       xmlns:doap="http://usefulinc.com/ns/doap#"
       xmlns:foaf="http://xmlns.com/foaf/0.1/"
       xmlns:of="http://of.openfoundry.org/ns#"
+      xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
       xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
