--- a/trunk/of/app/views/user/home.rhtml
+++ b/trunk/of/app/views/user/home.rhtml
@@ -92,7 +92,7 @@
     <% end %>:
   </dt>
   <dd>
-    <%= content_tag(:span, h @bio, :property => "rdfs:comment") %>
+    <%= content_tag(:span, h(@bio), :property => "rdfs:comment") %>
   </dd>
 <% end %>
 
