--- a/trunk/of/app/views/partials/_top_menu_data.rhtml
+++ b/trunk/of/app/views/partials/_top_menu_data.rhtml
@@ -57,7 +57,7 @@ var menudata=
 //        {id:'<%=_('Download PDF')%>', url:'http://rt.openfoundry.org/Foundry/Help/ossf.pdf'}
 //      ]  
 //    },
-    {id:'<%=_('Forum')%>', url:'http://whoswho.openfoundry.org/forum.html?func=showcat&catid=48'
+    {id:'<%=_('Forum')%>', url:'http://whoswho.openfoundry.org/forum.html?func=showcat&amp;catid=48'
     },
     {id:'<%=_('menu_Contact Us')%>', url:'mailto:contact@openfoundry.org',
       submenu:[
