--- a/of/app/views/news/_home_news.rhtml
+++ b/of/app/views/news/_home_news.rhtml
@@ -1,14 +1,17 @@
 <h3>
-  <%=link_to image_tag('/images/atom.png', {:alt => 'atom', :width => '20px', :style => 'padding:8px;float:right'}),
-                       {:controller => :news, :action => :new_openfoundry_news_feed, :format => :xml} %>
-  <img src="/images/of/main_icon01.gif" align="left" /><%=_('OpenFoundry News')%>
+  <%=link_to( image_tag('atom.png', 
+             {:alt => 'atom', :width => '20px', :style => 'padding:8px;float:right'}),
+             {:controller => :news, :action => :new_openfoundry_news_feed, :format => :xml} )%>
+  <%= image_tag "of/main_icon01.gif", :align => "left" %>
+  <%=_('OpenFoundry News')%>
 </h3>
 <%i=1 %>
 <ul>
   <%for news in newsList %>
     <li>
-    <%= if news.created_at > 7.days.ago then image_tag('/images/hot.png') end %>
-    <%= link_to news.subject, {:controller => "news", :action => "show", :id => news.id}, :class => "news_subject" %>
+    <%= if news.created_at > 7.days.ago then image_tag('hot.png') end %>
+    <%= link_to news.subject, 
+        {:controller => "news", :action => "show", :id => news.id}, :class => "news_subject" %>
     <%= news.created_at.strftime "%Y-%m-%d" %>
     </li>
     <%if i==1 %>
@@ -17,7 +20,7 @@
     <%end %>
   <%end %>
 </ul>
-<%=link_to _('More...'), {:controller => "news"}, :class => "more" %>
+<%=link_to( _('More...'), {:controller => "news"}, :class => "more" )%>
 <%=auto_discovery_link_tag(:rss,
    {:format => :rss, :controller => :news, :action => :new_openfoundry_news_feed,},
    {:title => s_("Feed|%{name} %{type} Feed") % {:name => _("OpenFoundry News"), :type => 'RSS'} }) %>
