--- a/of/app/views/news/_listn.rhtml
+++ b/of/app/views/news/_listn.rhtml
@@ -1,13 +1,16 @@
 <h3>
-  <%=link_to image_tag('/images/atom.png', {:alt => 'atom', :width => '20px', :style => 'padding:8px;float:right'}),
-                       {:controller => :news, :action => :new_project_news_feed, :format => :xml} %>
-  <img src="/images/of/icon05.gif" align="left" />
+  <%=link_to( image_tag('atom.png', 
+       {:alt => 'atom', :width => '20px', :style => 'padding:8px;float:right'}),
+       {:controller => :news, :action => :new_project_news_feed, :format => :xml} )%>
+  <%= image_tag "of/icon05.gif", :align => "left" %>
   <%=_('Project News')%>
 </h3>
 <ul>
   <%for news in newsList %>
   <li>
-    <%= link_to h(news.project.summary + ' - ' + news.subject), news1_path(:id => news.id, :project_id => news.catid) %>
+    <%= link_to( 
+	h(news.project.summary + ' - ' + news.subject), 
+	news1_path(:id => news.id, :project_id => news.catid) )%>
   </li>
   <%end %>
 </ul>
