--- a/of/app/views/project_notify/pending.html.erb
+++ b/of/app/views/project_notify/pending.html.erb
@@ -1,4 +1,5 @@
-Your project creation request "<%= @project_name %>" has been rejected!
+Your project creation request "<%= @project_name %>" has been pending!
+Please visit the following URL: <%= @project_url %>, or visit your user homepage.
 If you have any question, please contact us at <%= OPENFOUNDRY_SITE_ADMIN_EMAIL %>.
 
 <% if @replymessage != "" -%>
