--- a/trunk/of/app/views/project_notify/approved.rhtml
+++ b/trunk/of/app/views/project_notify/approved.rhtml
@@ -1,4 +1,12 @@
 Your project has been created!
 Please visit the following URL: <%= @project_url %>
 
+<% if @replymessage != "" -%>
+-----------------------------------------------------------------------------------
+
+<%= @replymessage %>
+
+-----------------------------------------------------------------------------------
+<% end -%>
+
 OpenFoundry
