--- a/branches/sso/of/of/config/messaging.rb.erb
+++ b/branches/sso/of/of/config/messaging.rb.erb
@@ -7,7 +7,6 @@ ActiveMessaging::Gateway.define do |s|
   #s.filter :some_filter, :only=>:orders
   #s.processor_group :group1, :order_processor
   
-  #s.destination :message_client, '/queue/MessageClient'
+  s.destination :queue_data, '/queue/ossf_message'
   
-  s.destination :ossf_msg, '/topic/OSSF.MSG'
 end
