--- a/branches/sso/of/of/app/views/partials/_top_menu_data.rhtml
+++ b/branches/sso/of/of/app/views/partials/_top_menu_data.rhtml
@@ -1,25 +1,25 @@
 <script>
 var menudata=
   [
-    {id: '<%=_('menu_OpenFoundry')%>', url:'/',
+    {id: '<%=_('menu_OpenFoundry')%>', url:'<%=url_for('/of/')%>',
       submenu:[
-      {id:'<%=_('menu_Home')%>', url:'/'},
-      {id:'<%=_('OpenFoundry News')%>', url:'/news'},
-      {id:'<%=_('About OpenFoundry Project')%>', url:'/projects/1'},
+      {id:'<%=_('menu_Home')%>', url:'/of/'},
+      {id:'<%=_('OpenFoundry News')%>', url:'/of/news'},
+      {id:'<%=_('About OpenFoundry Project')%>', url:'/of/projects/1'},
       {id:'<%=_('menu_About OSSF')%>', url:wo("<%=_('menu_About_OSSF_link')%>")},
       {id:'<%=_('menu_Newsletter')%>', url:wo('http://www.openfoundry.org/Newsletter.html')}
       ]
     },
-    {id:'<%=_('menu_Projects')%>', url:'/projects',
+    {id:'<%=_('menu_Projects')%>', url:'/of/projects',
       submenu:[
-        {id:'<%=_('menu_Project Listing')%>', url:'/projects'},
-        {id:'<%=_('menu_Project Category')%>', url:'/category'},
-        {id:'<%=_('menu_Project News')%>', url:'/projects/news'},
-        {id:'<%=_('menu_Latest Releases')%>', url:'/releases/latest'},
-        {id:'<%=_('menu_Top Downloads')%>', url:'/releases/top'},
-        {id:'<%=_('menu_Help Wanted')%>', url:'/projects/jobs'},
+        {id:'<%=_('menu_Project Listing')%>', url:'/of/projects'},
+        {id:'<%=_('menu_Project Category')%>', url:'/of/category'},
+        {id:'<%=_('menu_Project News')%>', url:'/of/projects/news'},
+        {id:'<%=_('menu_Latest Releases')%>', url:'/of/releases/latest'},
+        {id:'<%=_('menu_Top Downloads')%>', url:'/of/releases/top'},
+        {id:'<%=_('menu_Help Wanted')%>', url:'/of/projects/jobs'},
         {id:'<%=_('menu_WebHosting')%>', url:wo('http://webhosting.openfoundry.org/')},
-        {id:'<img src="/images/icon/star.gif"/><%=_('Create Project')%>', url:'/projects/new'}
+        {id:'<img src="/images/icon/star.gif"/><%=_('Create Project')%>', url:'/of/projects/new'}
       ]
     },
 <% if current_user.login != 'guest' %>
@@ -57,25 +57,25 @@ var menudata=
 //        {id:'<%=_('Download PDF')%>', url:'http://rt.openfoundry.org/Foundry/Help/ossf.pdf'}
 //      ]  
 //    },
-    {id:'<%=_('Forum')%>', url:'http://whoswho.openfoundry.org/forum.html?func=showcat&amp;catid=48'
+    {id:'<%=_('Forum')%>', url:'http://ssodev.openfoundry.org/forum.html?func=showcat&amp;catid=48'
     },
     {id:'<%=_('menu_Contact Us')%>', url:'mailto:contact@openfoundry.org',
       submenu:[
         {id:'<%=_('menu_Contact Us')%>', url:'mailto:contact@openfoundry.org'},
-        {id:'<%=_('Bug Report')%>', url:'/projects/1/rt'}
+        {id:'<%=_('Bug Report')%>', url:'/of/projects/1/rt'}
       ]
     },
-    {id:'<%=_('Help')%>', url:'/help',
+    {id:'<%=_('Help')%>', url:'/of/help',
       submenu:[
-        {id:'<%=_('OpenFoundry')%>', url:'/help'},
-        {id:'<%=_('NSC Project')%>', url:'/help/nsc_project'},
-        {id:'<%=_('Version Control')%>', url:'/help/vcs'}
+        {id:'<%=_('OpenFoundry')%>', url:'/of/help'},
+        {id:'<%=_('NSC Project')%>', url:'/of/help/nsc_project'},
+        {id:'<%=_('Version Control')%>', url:'/of/help/vcs'}
       ]
     }
    <% if current_user.has_role? 'site_admin' %>
-    ,{id:'<%=_('menu_Site Admin')%>', url:'/site_admin',
+    ,{id:'<%=_('menu_Site Admin')%>', url:'/of/site_admin',
       submenu:[
-        {id:'<%= _('Project List')%>', url:'/site_admin/project'},
+        {id:'<%= _('Project List')%>', url:'/of/site_admin/project'},
 //        {id:'<%= _('Translations')%>', url:''},
 //        {id:'<%= _('Module Menagements')%>', url:''}
       ]
