--- a/trunk/of/app/views/user/signup.rhtml
+++ b/trunk/of/app/views/user/signup.rhtml
@@ -1,4 +1,6 @@
 <div id="user_signup" title="user signup" class="form">
+<% @module_name = _('Basic Information') %>
+<h1><%=_("Sign Up") + "<span style=\"font-size:10px; margin-left: 20px;\">(" + required_icon() + _("required_icon") + ")</span>"%></h1>
   <%#= head_helper :error => true %>
   <%= error_messages_for :user %>
     <% form_for @user, :url => {:action => :signup}, :builder => ApplicationHelper::TwoColumnFormBuilder do |f|-%>
