--- a/branches/sso/of/of/public/stylesheets/openfoundry.css
+++ b/branches/sso/of/of/public/stylesheets/openfoundry.css
@@ -17,9 +17,10 @@ fieldset legend { font-weight:bold; color:#4265DE; }
 a { text-decoration: none; color:#0D356F; }
 a:hover { color: #577FE3; /*border-bottom: dotted 1px #333;*/ }
 textarea { height:100px; width:500px; }
-ul { margin:0px; padding:0 5px 0 20px; list-style-position:outside; list-style:url(/images/of/icon_s01.gif); }
+ul { margin:0px; padding:0 5px 0 20px; list-style-position:outside; list-style:url(../images/of/icon_s01.gif); }
 em { color:red; font-weight:bold; font-style:normal; }
-.button { background:url(/images/button.gif) repeat-x; color:white; cursor:pointer; padding:2px 5px; margin:0px; }
+
+.button { background:url(../images/button.gif) repeat-x; color:white; cursor:pointer; padding:2px 5px; margin:0px; }
 .button:hover { background-position:bottom; }
 .odd { }
 .even { background-color:#EFF4FF; }
@@ -29,7 +30,7 @@ th { padding:3px; }
 
 /* For Layout */
 body { 
-	behavior: url(/stylesheets/csshover2.htc); /* call hover behaviour file */
+	behavior: url(csshover2.htc); /* call hover behaviour file */
   margin: 0px;
 }
 /*width:227px; */
@@ -68,15 +69,15 @@ body {
 
 .more { margin-left:8px; font-weight:bold; }
 /*
-#Login { background:url(/images/of/login_bg.gif) repeat-x; padding:5px; width:215px; }
-#Login h3 { background-image:url(/images/of/login_01.gif); height:25px; padding:12px 0px 0px 35px; margin:-5px; color:white;  }
+#Login { background:url(../images/of/login_bg.gif) repeat-x; padding:5px; width:215px; }
+#Login h3 { background-image:url(../images/of/login_01.gif); height:25px; padding:12px 0px 0px 35px; margin:-5px; color:white;  }
 #Login img { border:solid 2px #999999; }
 */
 
-#HomeLeft h3, #HomeRight h3 { background-image:url(/images/of/icon_bg01.gif); color:#39379C; line-height:33px; width:214px; font-weight:normal; }
+#HomeLeft h3, #HomeRight h3 { background-image:url(../images/of/icon_bg01.gif); color:#39379C; line-height:33px; width:214px; font-weight:normal; }
 #HomeLeft ul, #HomeRight ul, #Home ul { margin:5px 0 15px 0px; width:90%; }
 #Home { border-right:solid 1px #F3F3F9; border-left:solid 1px #F3F3F9; }
-#Home h3 { background-image:url(/images/of/main_title_bg01.gif); color:#686868; line-height:38px; font-weight:normal; }
+#Home h3 { background-image:url(../images/of/main_title_bg01.gif); color:#686868; line-height:38px; font-weight:normal; }
 
 #OFIntro { height:200px; margin:0px 15px; border-bottom:solid 1px #F3F3F9; }
 #OFIntro #Module { float:right; width:34%; overflow:hidden; }
@@ -91,7 +92,7 @@ body {
 
 /* project log */
 .project_logo_border{
-  background:url(/images/project_logo_border.png) no-repeat;
+  background:url(../images/project_logo_border.png) no-repeat;
   width:166px; height:187px;
   padding:15px 17px;
   margin-left:13px;
@@ -102,8 +103,8 @@ body {
 
 /* project left menu tab */
 #menu_tab li { list-style:none; float:left; width:73px; height:27px; text-align:center; line-height:27px; cursor:pointer;}
-#menu_tab #project_menu_tab { background:url(/images/tab_green.gif); }
-#menu_tab #project_admin_menu_tab { background:url(/images/tab_pink.gif); }
+#menu_tab #project_menu_tab { background:url(../images/tab_green.gif); }
+#menu_tab #project_admin_menu_tab { background:url(../images/tab_pink.gif); }
 
 /* project left menu */
 #project_left_menu { width:180px; text-align:center; }
@@ -146,7 +147,7 @@ body {
 {display: block;}
 
 #project_left_menu a { display:block; }
-#project_left_menu .subimg { background:url(/images/subimg.gif) no-repeat right; }
+#project_left_menu .subimg { background:url(../images/subimg.gif) no-repeat right; }
 
 
 
@@ -184,7 +185,7 @@ background:white url(http://rt.openfoundry.org/img/tab/bg.gif) repeat-x scroll c
   padding:10px 10px 0pt;
 }
 .module_tab li {
-  background:transparent url(/images/project_nav_tab_l.gif) no-repeat scroll left top;
+  background:transparent url(../images/project_nav_tab_l.gif) no-repeat scroll left top;
   float:left;
   list-style-image:none;
   list-style-position:outside;
@@ -193,7 +194,7 @@ background:white url(http://rt.openfoundry.org/img/tab/bg.gif) repeat-x scroll c
   padding:0pt 0pt 0pt 9px;
 }
 .module_tab a {
-  background:transparent url(/images/project_nav_tab_r.gif) no-repeat scroll right top;
+  background:transparent url(../images/project_nav_tab_r.gif) no-repeat scroll right top;
   color:#776655;
   display:block;
   font-weight:bold;
@@ -211,21 +212,21 @@ background:white url(http://rt.openfoundry.org/img/tab/bg.gif) repeat-x scroll c
 
 /* module */
 #of_module { width:750px; height:2000px;}
-#module_nav { display:table; padding:0 0 0 0px; margin:0px 0 0 0px; width:100%; background:url(/images/project_navbar_l.gif) no-repeat;}
-#module_nav #module_nav_center { margin:0 0 0 6px; background:url(/images/project_navbar_c.gif); }
-#module_nav #module_nav_right { background:url(/images/project_navbar_r.gif) no-repeat right; line-height:23px; height:32px; }
-#module_nav h3 { background:url(/images/project_navbar_arrow.gif) no-repeat; padding-left:30px; float:left; }
+#module_nav { display:table; padding:0 0 0 0px; margin:0px 0 0 0px; width:100%; background:url(../images/project_navbar_l.gif) no-repeat;}
+#module_nav #module_nav_center { margin:0 0 0 6px; background:url(../images/project_navbar_c.gif); }
+#module_nav #module_nav_right { background:url(../images/project_navbar_r.gif) no-repeat right; line-height:23px; height:32px; }
+#module_nav h3 { background:url(../images/project_navbar_arrow.gif) no-repeat; padding-left:30px; float:left; }
 #module_nav #module_nav_tab { float:right; text-align:right; margin-top:7px; }
 #module_content { border:solid 1px #ccc; border-top:none; padding:3px; }
 
 /* rt */
 #rt_function_bar { padding:5px 10px; }
-*:first-child+html .bug_report { background:url(/images/bug.gif) no-repeat; padding-left:25px; line-height:25px; display:inline-block; }
-* html .bug_report { background:url(/images/bug.gif) no-repeat; padding-left:25px; line-height:25px; display:inline-block; }
-.bug_report:before { content:url(/images/bug.gif); padding-top:5px; }
-*:first-child+html .search { background:url(/images/search.gif) no-repeat; padding-left:25px; line-height:25px; display:inline-block; }
-* html .search { background:url(/images/search.gif) no-repeat; padding-left:25px; line-height:25px; display:inline-block; }
-.search:before { content:url(/images/search.gif); padding-top:5px; }
+*:first-child+html .bug_report { background:url(../images/bug.gif) no-repeat; padding-left:25px; line-height:25px; display:inline-block; }
+* html .bug_report { background:url(../images/bug.gif) no-repeat; padding-left:25px; line-height:25px; display:inline-block; }
+.bug_report:before { content:url(../images/bug.gif); padding-top:5px; }
+*:first-child+html .search { background:url(../images/search.gif) no-repeat; padding-left:25px; line-height:25px; display:inline-block; }
+* html .search { background:url(../images/search.gif) no-repeat; padding-left:25px; line-height:25px; display:inline-block; }
+.search:before { content:url(../images/search.gif); padding-top:5px; }
 
 
 /* For News */
@@ -255,7 +256,7 @@ background:white url(http://rt.openfoundry.org/img/tab/bg.gif) repeat-x scroll c
 /* For Flash */
 .flasherror, .flashwarning, .flashnotice, .flashmessage
 {
-  background:#FFEE9F url(/images/icon/error.gif) no-repeat scroll 10px 7px;
+  background:#FFEE9F url(../images/icon/error.gif) no-repeat scroll 10px 7px;
   border:1px solid #FFD71F;
   margin:5px 20px;
   padding:7px 45px;
@@ -264,25 +265,25 @@ background:white url(http://rt.openfoundry.org/img/tab/bg.gif) repeat-x scroll c
 .flasherror
 {
   background-color: #FFCFD8;
-  background-image: url(/images/icon/error.gif);
+  background-image: url(../images/icon/error.gif);
   border-color: #EEBEC7;
 }
 .flashwarning
 {
   background-color: #FFEE9F;
-  background-image: url(/images/icon/warning.gif);
+  background-image: url(../images/icon/warning.gif);
   border-color: #EEDD8E;
 }
 .flashnotice
 {
   background-color: #D1EAEF;
-  background-image: url(/images/icon/notice.gif);
+  background-image: url(../images/icon/notice.gif);
   border-color: #C0D9DE;
 }
 .flashmessage
 {
   background-color: #E3EFB3;
-  background-image: url(/images/icon/message.gif);
+  background-image: url(../images/icon/message.gif);
   border-color: #D2DEA2;
 }
 
@@ -337,3 +338,4 @@ width:500px;
 /* for layout of news list */
 .sort { margin-bottom: 5px; }
 li.news_list { border-bottom: solid 1px grey; margin-bottom: 10px; }
+
