--- a/branches/sso/of/of/app/views/layouts/integration.html.erb
+++ b/branches/sso/of/of/app/views/layouts/integration.html.erb
@@ -1,11 +1,105 @@
 <!DOCTYPE html PUBLIC "-//W4C//DTD XHTML 1.0 Transitional//EN"
        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
+
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:doap="http://usefulinc.com/ns/doap#"
+      xmlns:foaf="http://xmlns.com/foaf/0.1/"
+      xmlns:of="http://of.openfoundry.org/ns#"
+      xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
+      xml:lang="en" lang="en">
 <head>
+  <link rel="stylesheet" href="http://freenix.iis.sinica.edu.tw/wsw/components/com_customproperties/css/customproperties.css" type="text/css" />
+  <link rel="stylesheet" href="http://freenix.iis.sinica.edu.tw/wsw/components/com_gantry/css/gantry.css" type="text/css" />
+  <link rel="stylesheet" href="http://freenix.iis.sinica.edu.tw/wsw/components/com_gantry/css/grid-12.css" type="text/css" />
+  <link rel="stylesheet" href="http://freenix.iis.sinica.edu.tw/wsw/components/com_gantry/css/joomla.css" type="text/css" />
+
+  <link rel="stylesheet" href="http://freenix.iis.sinica.edu.tw/wsw/templates/rt_quantive_j15/css/joomla.css" type="text/css" />
+  <link rel="stylesheet" href="http://freenix.iis.sinica.edu.tw/wsw/templates/rt_quantive_j15/css/splitmenu.css" type="text/css" />
+
+  <link rel="stylesheet" href="http://freenix.iis.sinica.edu.tw/wsw/templates/rt_quantive_j15/css/style1.css" type="text/css" />
+
+  <link rel="stylesheet" href="http://freenix.iis.sinica.edu.tw/wsw/templates/rt_quantive_j15/css/light-body.css" type="text/css" />
+  <link rel="stylesheet" href="http://freenix.iis.sinica.edu.tw/wsw/templates/rt_quantive_j15/css/demo-styles.css" type="text/css" />
+  <link rel="stylesheet" href="http://freenix.iis.sinica.edu.tw/wsw/templates/rt_quantive_j15/css/template.css" type="text/css" />
+  <link rel="stylesheet" href="http://freenix.iis.sinica.edu.tw/wsw/templates/rt_quantive_j15/css/template-firefox.css" type="text/css" />
+  <link rel="stylesheet" href="http://freenix.iis.sinica.edu.tw/wsw/templates/rt_quantive_j15/css/typography.css" type="text/css" />
   <%= yield :head_content %>
 </head>
-<body>
-  <%= yield :header_content %>
-  <%= yield :body_content %>
+
+<body class="backgroundlevel-low backgroundstyle-style8 bodylevel-med bodystyle-light cssstyle-style1 logostyle-dark font-family-helvetica font-size-is-default menu-type-splitmenu col12 ">
+<div id="rt-main-background">
+  <div class="rt-container">
+    <div id="rt-drawer">
+      <div class="rt-grid-12 rt-alpha rt-omega">
+        <div class="clear"></div>
+      </div>
+      <div class="clear"></div>
+    </div>
+    <div id="rt-header">
+
+      <div class="rt-grid-12 rt-alpha rt-omega">
+        <div style="float:right;">
+          <%= yield :header_content %>
+        </div>
+        <div class="rt-block">
+          <a href="http://freenix.iis.sinica.edu.tw/wsw/" id="rt-logo"></a>
+        </div>
+      </div>
+      <div class="clear"></div>
+
+    </div>
+    <div id="rt-navigation"><div id="rt-navigation2"><div id="rt-navigation3">
+      <div class="nopill">
+        <ul class="menutop level1">
+          <li class="item1">
+            <a class="orphan item" href="http://freenix.iis.sinica.edu.tw/wsw/">
+              <span> 首頁         </span>
+            </a>
+
+          </li>
+          <li class="item6">
+              <a class="orphan item" href="http://freenix.iis.sinica.edu.tw/wsw/index.php?option=com_comprofiler&amp;task=userslist&amp;listid=4&amp;Itemid=6&amp;lang=tw">
+              <span> 社群         </span>
+            </a>
+          </li>
+          <li class="item4">
+            <a class="orphan item" href="http://freenix.iis.sinica.edu.tw/wsw/index.php?option=com_content&amp;view=section&amp;layout=blog&amp;id=13&amp;Itemid=4&amp;lang=tw">
+
+              <span> 新聞         </span>
+            </a>
+          </li>
+          <li class="item5">
+              <a class="orphan item" href="http://freenix.iis.sinica.edu.tw/wsw/index.php?option=com_content&amp;view=category&amp;layout=blog&amp;id=106&amp;Itemid=5&amp;lang=tw">
+              <span> 法律源地         </span>
+            </a>
+
+          </li>
+          <li class="item3">
+              <a class="orphan item" href="http://freenix.iis.sinica.edu.tw/wsw/index.php?option=com_eventlist&amp;view=eventlist&amp;Itemid=3&amp;lang=tw">
+              <span> 工作坊         </span>
+            </a>
+          </li>
+          <li class="item2">
+            <a class="orphan item" href="http://freenix.iis.sinica.edu.tw/wsw/index.php?option=com_mtree&amp;Itemid=2&amp;lang=tw&amp;Name=Value">
+
+              <span> 資源表列         </span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="clear"></div>
+    </div></div></div>
+
+  <div class="rt-surround"><div class="rt-surround2"><div class="rt-surround3">
+    <div id="rt-main-surround"><div id="rt-main" class="mb9-sa3"><div class="rt-main-inner">
+      <!-- content body begin -->
+      <%= yield :body_content %>
+      <!-- content body end -->
+    </div></div></div>
+  </div></div></div>
+
+  <div class="rt-surround-bottom"><div class="rt-surround-bottom2"><div class="rt-surround-bottom3"></div></div></div></div>
+</div>
 </body>
 </html>
+
