--- a/branches/sso/of/of/app/views/news/_listn.html.erb
+++ b/branches/sso/of/of/app/views/news/_listn.html.erb
@@ -1,18 +1,20 @@
-<h3>
+<% module_title = capture do -%>
   <%=link_to( image_tag('atom.png', 
        {:alt => 'atom', :width => '20px', :style => 'padding:8px;float:right'}),
        {:controller => :news, :action => :new_project_news_feed, :format => :xml} )%>
   <%= image_tag "of/icon05.gif", :align => "left" %>
   <%=_('Project News')%>
-</h3>
+<% end -%>
+
+<% module_content = capture do -%>
 <ul>
-  <%for news in newsList %>
+  <%for news in newsList -%>
   <li>
     <%= link_to( 
 	h(news.project.summary + ' - ' + news.subject), 
 	news1_path(:id => news.id, :project_id => news.catid) )%>
   </li>
-  <%end %>
+  <%end -%>
 </ul>
 <%=link_to _('More...'), project_news_path(), :class => "more" %>
 <%=auto_discovery_link_tag(:rss,
@@ -20,5 +22,7 @@
    {:title => s_("Feed|%{name} %{type} Feed") % {:name => _('Project News'), :type => 'RSS'} }) %>
 <%=auto_discovery_link_tag(:atom,
    {:format => :xml, :controller => :news, :action => :new_project_news_feed},
-   {:title => s_("Feed|%{name} %{type} Feed") % {:name => _("Project News"), :type => 'ATOM'} }) %>
+	 {:title => s_("Feed|%{name} %{type} Feed") % {:name => _("Project News"), :type => 'ATOM'} }) %>
+<% end -%>
 
+<%= render :file => 'layouts/rt_module', :locals => {:module_title => module_title, :module_content => module_content, :variation => 'square1'}  %>
