--- a/branches/sso/of/of/app/views/layouts/rt_module.html.erb
+++ b/branches/sso/of/of/app/views/layouts/rt_module.html.erb
@@ -1,11 +1,15 @@
 <% variation = variation || '' %>
 <% module_title = module_title || nil %>
+<% module_tabs = module_tabs || nil %>
 <div class="rt-block <%= variation %>">
   <div class="rt-module-surround">
     <div class="rt-module-top"><div class="rt-module-top2"><div class="rt-module-top3"></div></div></div>
     <div class="rt-module-inner">
+      <% if module_tabs %>
+        <%= module_tabs %>
+      <% end %>
       <% if module_title %>
-        <div class="module-title"><h2><%= module_title %></h2></div>
+        <div class="module-title"><h2 class="title"><%= module_title %></h2></div>
       <% end %>
       <div class="clear"></div>
       <div class="module-content">
