--- a/branches/sso/of/of/app/views/partials/_home_menu.html.erb
+++ b/branches/sso/of/of/app/views/partials/_home_menu.html.erb
@@ -6,9 +6,14 @@
 <ul class="menu">
   <li><%= link_to '<img src="/of/images/icon/star.gif"/>'+_('Create Project')%></li>
   <% if current_user.login != 'guest' -%>
-  <li><%= link_to _('menu_My Projects')%></li>
-  <li><%= link_to _('menu_My Tickets')%></li>
-  <li><%= link_to _('menu_My Messages')%></li>
+  <li class="parent active item19">
+    <span><%= link_to _("Personal") %></span>
+    <ul>
+    <li id="current" class="active item20"><span><%= link_to _('menu_My Projects')%></span></li>
+    <li><%= link_to _('menu_My Tickets')%></li>
+    <li><%= link_to _('menu_My Messages')%></li>
+    </ul>
+  </li>
   <% end -%>
   <li><%= link_to _('menu_License Wizard') %></li>
   <li><%= link_to _('Forum') %></li>
