1.Lost openfoundry.css. 2.Adjust home_news.

--- a/branches/sso/of/of/app/views/layouts/application.html.erb
+++ b/branches/sso/of/of/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <% end %>
   <%# bundle :name => "all", :packr_options => {:shrink_vars => true, :base62 => false} do %>
   <%#= stylesheet_link_tag "scaffold", "openfoundry", "header", "transmenu" %>
-  <%= stylesheet_link_tag "scaffold", "ofnew" %>
+  <%= stylesheet_link_tag "scaffold", "openfoundry" %>
   <%#= javascript_include_tag "effects", "transmenu", "application" %>
   <%= javascript_include_tag "effects", "application" %>
   <%= javascript_include_tag 'calendar/calendar' %>
