--- a/branches/sso/of/of/app/views/partials/_homeleft.html.erb
+++ b/branches/sso/of/of/app/views/partials/_homeleft.html.erb
@@ -4,5 +4,5 @@
                   :projectCount => Project.count(:conditions => Project.in_used_projects())
                   } %>
   <%= render :partial => "partials/home_menu" %>
-  <%= render :partial => "news/home_news", :locals =>{:newsList => News.home_news} %>
+  <%= render :partial => "news/home_news", :locals =>{:newsList => News.home_news, :showDescr => false} %>
 </div>
