--- a/branches/sso/of/of/app/views/releases/download.html.erb
+++ b/branches/sso/of/of/app/views/releases/download.html.erb
@@ -22,10 +22,10 @@
     <% @files = release.fileentity %>
     <% @files.each do |file| %>
     <tr>
-      <td><h2><%= link_to h(file.path), download_url(:project_name => @project_name, 
+      <td><b><%= link_to h(file.path), download_url(:project_name => @project_name, 
 					       :release_version => release.version,
-					       :file_name => file.path ) %></h2>
-      <%= "#{number_to_human_size(file.size)}, " + _("Downloads Hits ") + file.file_counter.to_s %><br>
+					       :file_name => file.path ) %></b><br/>
+      <%= "#{number_to_human_size(file.size)}, " + _("Downloads Hits ") + file.file_counter.to_s %><br/>
         <%= h(file.description) %>
       </td>
       <% if @permissions.include?(:survey)%>
