--- a/branches/sso/of/of/public/stylesheets/openfoundry.css
+++ b/branches/sso/of/of/public/stylesheets/openfoundry.css
@@ -1,5 +1,10 @@
-fieldset { border:solid 2px #DEE7FF; }
-fieldset legend { font-weight:bold; color:#4265DE; }
+#of-body fieldset { border:solid 2px #DEE7FF; }
+#of-body fieldset legend { font-weight:bold; color:#4265DE; }
+#of-body textarea { height:100px; width:500px; } 
+#of-body .odd { }
+#of-body .even { background-color:#EFF4FF; }
+#of-body dl>dt { font-weight:bold; }
+#of-body dl>dd { margin-left:35px; }
 
 /* Left menu */
 #LeftMenu { padding-left:5px; }
@@ -119,7 +124,7 @@ fieldset legend { font-weight:bold; color:#4265DE; }
 }
 
 #of_module { width:750px; height:2000px;}
-#module_content { border:solid 1px #ccc; border-top:none; padding:3px; }
+#module_content { min-height:450px; }
 
 /* rt */
 #rt_function_bar { padding:5px 10px; }
