Append download count for each item

--- a/branches/sso/of/of/app/views/releases/_most_popular.html.erb
+++ b/branches/sso/of/of/app/views/releases/_most_popular.html.erb
@@ -14,6 +14,7 @@
 	h(download.project.summary), 
 	download1_path(:project_id => download.project_id) 
 	) %>
+      (<%= download.release_counter %>)
     </li>
   <%end %>
 </ul>
