layout no_frame add of-body div.

--- a/branches/sso/of/of/app/views/layouts/no_frame.html.erb
+++ b/branches/sso/of/of/app/views/layouts/no_frame.html.erb
@@ -16,6 +16,8 @@
   <%= javascript_include_tag "application", "module" %>
 </head>
 <body>
-<%= yield :layout %>
+  <div id="of-body">
+    <%= yield :layout %>
+  </div>
 </body>
 </html>
