layout no_frmae remove some js.

--- a/branches/sso/of/of/app/views/layouts/no_frame.html.erb
+++ b/branches/sso/of/of/app/views/layouts/no_frame.html.erb
@@ -9,11 +9,8 @@
       xml:lang="en" lang="en">
 <head>
  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <% bundle :name => "prototype" do %>
-  <%= javascript_include_tag "prototype" %>
-  <% end %>
   <%= stylesheet_link_tag "openfoundry" %>
-  <%= javascript_include_tag "application", "module" %>
+  <%= javascript_include_tag "module" %>
 </head>
 <body>
   <div id="of-body">
